# nas-xunlei-client

./: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: .prompt.txt  产品设计文档.md  开发计划文档.md
src/: App.vue  blank.html  control-bar.html  index.html  main-view.html  main.js
src-electron/: main.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/cmd/: config.rs  fs.rs  mod.rs
src-tauri/src/utils/: error.rs
src/assets/: main.css
src/components/Config/: ConfigForm.vue
src/components/Main/: ControlBar.vue  ErrorDisplay.vue  WebViewContainer.vue
src/router/: index.js
src/store/: config.js
src/utils/: auth.js  webview.js
src/views/: ConfigView.vue  MainView.vue
