[package]
name = "nas-xunlei-client"
version = "0.0.1"
description = "群辉NAS迅雷客户端"
authors = ["你的名字"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "shell-execute", "shell-open", "dialog-open", "window-close", "window-hide", "window-show", "window-maximize", "window-minimize", "window-unmaximize", "window-unminimize", "window-start-dragging", "http-all", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-copy-file", "fs-create-dir", "fs-remove-dir", "fs-remove-file", "fs-exists", "protocol-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
keyring = "2.0.4"
url = "2.4.0"
anyhow = "1.0.75"
thiserror = "1.0.48"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
